<resources>
    <string name="app_name">NSS_YRCTracker</string>

    <string name="google_maps_key" translatable="false">AIzaSyCx4oQApTqJRcdl3hYOrV3nYtYu3kj4-gQ</string>

    <string name="create_new_event">Create New Event</string>
    <string name="event_title_hint">Event Title</string>
    <string name="event_date_hint">Event Date (YYYY-MM-DD)</string>
    <string name="event_description_hint">Event Description</string>
    <string name="select_location">Select Location</string>
    <string name="no_location_selected">No location selected</string>
    <string name="save_event">Save Event</string>
    <string name="location_selected">Location: %1$s</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view_registrations">View Registrations</string>
    <string name="event_title">Event Title</string>

    <string name="title_events">Events</string>
    <string name="title_manage">Manage</string>
    <string name="title_approvals">Approvals</string>
    <string name="title_archives">Archives</string>

    <string-array name="roles">
        <item>Student</item>
        <item>Admin</item>
    </string-array>
</resources>